@@ -1,15 +1,10 @@
 package com.zeynep.study_cases;
 
-import com.querydsl.jpa.impl.JPAQueryFactory;
 import com.zeynep.study_cases.model.AuthorEntity;
 import com.zeynep.study_cases.model.BookEntity;
 import com.zeynep.study_cases.model.dto.AuthorDto;
-import com.zeynep.study_cases.model.query.QAuthorEntity;
-import com.zeynep.study_cases.model.query.QBookEntity;
 import com.zeynep.study_cases.repository.AuthorRepository;
 import com.zeynep.study_cases.service.AuthorBookService;
-import jakarta.persistence.EntityManager;
-import jakarta.persistence.PersistenceContext;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -25,54 +20,44 @@ import static org.junit.jupiter.api.Assertions.assertNotNull;
 @SpringBootTest
 class StudyCasesApplicationTests {
 
-	@Autowired
-	AuthorRepository authorRepository;
+    @Autowired
+    AuthorRepository authorRepository;
 
-	@Autowired
-	AuthorBookService authorBookService;
+    @Autowired
+    AuthorBookService authorBookService;
 
-	QAuthorEntity qAuthor;
-	QBookEntity qBook;
-	@PersistenceContext
-	private EntityManager entityManager;
-	JPAQueryFactory queryFactory;
+    @BeforeEach
+    void setup() {
+        AuthorEntity author1 = new AuthorEntity("Jane doe");
+        AuthorEntity author2 = new AuthorEntity("Linda Roe");
+        AuthorEntity author3 = new AuthorEntity("Johnny Doe");
 
-	@BeforeEach
-	void setup() {
-		AuthorEntity author1 = new AuthorEntity("Jane doe");
-		AuthorEntity author2 = new AuthorEntity("Linda Roe");
-		AuthorEntity author3 = new AuthorEntity("Johnny Doe");
+        BookEntity book1 = new BookEntity("Book 1", author1);
+        BookEntity book2 = new BookEntity("Book 2", author1);
+        BookEntity book3 = new BookEntity("Book 3", author2);
+        BookEntity book4 = new BookEntity("Book 4", author3);
 
-		BookEntity book1 = new BookEntity("Book 1", author1);
-		BookEntity book2 = new BookEntity("Book 2", author1);
-		BookEntity book3 = new BookEntity("Book 3", author2);
-		BookEntity book4 = new BookEntity("Book 4", author3);
+        author1.setBooks(List.of(book1, book2));
+        author2.setBooks(List.of(book3));
+        author3.setBooks(List.of(book4));
 
-		author1.setBooks(List.of(book1, book2));
-		author2.setBooks(List.of(book3));
-		author3.setBooks(List.of(book4));
+        authorRepository.saveAll(Arrays.asList(author1, author2, author3));
+    }
 
-		authorRepository.saveAll(Arrays.asList(author1, author2, author3));
+    @Test
+    public void should_get_authors_with_booksOfThem() {
+        List<AuthorDto> authors = authorBookService.getAuthorsWithBooksOptimized();
 
-		queryFactory = new JPAQueryFactory(entityManager);
-		qAuthor = QAuthorEntity.authorEntity;
-		qBook = QBookEntity.bookEntity;
-	}
+        assertNotNull(authors);
+        assertEquals(3, authors.size());
 
-	@Test
-	public void should_get_authors_with_booksOfThem(){
-		List<AuthorDto> authors = authorBookService.getAuthorsWithBooksOptimized();
+        assertNotNull(authors.get(0).getBookDtos());
+        assertNotNull(authors.get(1).getBookDtos());
+        assertNotNull(authors.get(2).getBookDtos());
 
-		assertNotNull(authors);
-		assertEquals(3, authors.size());
-
-		assertNotNull(authors.get(0).getBookDtos());
-		assertNotNull(authors.get(1).getBookDtos());
-		assertNotNull(authors.get(2).getBookDtos());
-
-		assertEquals("Jane doe", authors.get(0).getName());
-		assertEquals("Linda Roe", authors.get(1).getName());
-		assertEquals("Johnny Doe", authors.get(2).getName());
-	}
+        assertEquals("Jane doe", authors.get(0).getName());
+        assertEquals("Linda Roe", authors.get(1).getName());
+        assertEquals("Johnny Doe", authors.get(2).getName());
+    }
 
 }
